force-app/main/default/objects/Account/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>事務所</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.NichibenrenSakujyo__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>PersonAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>