force-app/main/default/objects/Account/fields/AccountID18__c.field-meta.xml
<CustomField>
    <fullName>AccountID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先ID18桁</label>
    <type>Text</type>
</CustomField>