force-app/main/default/objects/Account/fields/AccountingMemo__c.field-meta.xml
<CustomField>
    <fullName>AccountingMemo__c</fullName>
    <label>経理メモ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>