force-app/main/default/objects/Account/fields/AccountMemo__c.field-meta.xml
<CustomField>
    <fullName>AccountMemo__c</fullName>
    <label>取引先メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>