force-app/main/default/objects/Account/fields/AntiCompanyCheck__c.field-meta.xml
<CustomField>
    <fullName>AntiCompanyCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>反社チェック</label>
    <type>Checkbox</type>
</CustomField>