force-app/main/default/objects/Account/fields/BillingRepPerson__c.field-meta.xml
<CustomField>
    <fullName>BillingRepPerson__c</fullName>
    <inlineHelpText>個人取引先の場合は個人名のみ。法人取引先の場合は法人名＆個人名。「様」はつけない。</inlineHelpText>
    <label>請求先担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>