force-app/main/default/objects/Account/fields/ClaimCollectionResponsible__c.field-meta.xml
<CustomField>
    <fullName>ClaimCollectionResponsible__c</fullName>
    <label>債権回収担当</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>税理士ドットコム事業部</fullName>
            </value>
            <value>
                <fullName>税理士ドットコム事業部（Pro）</fullName>
            </value>
            <value>
                <fullName>税）多田芳幸</fullName>
            </value>
            <value>
                <fullName>税）栗田深奈</fullName>
            </value>
            <value>
                <fullName>税）加藤元明</fullName>
            </value>
            <value>
                <fullName>税）佐藤圭一</fullName>
            </value>
            <value>
                <fullName>税）作山治由</fullName>
            </value>
            <value>
                <fullName>税）田口大輔</fullName>
            </value>
            <value>
                <fullName>税）坂尻克樹</fullName>
            </value>
            <value>
                <fullName>税）鈴鹿晋平</fullName>
            </value>
            <value>
                <fullName>弁護士ドットコム本部</fullName>
            </value>
            <value>
                <fullName>宇藤誠</fullName>
            </value>
            <value>
                <fullName>石本寛基</fullName>
            </value>
            <value>
                <fullName>佐藤敏靖</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>