force-app/main/default/objects/Account/fields/CollectionMethod__c.field-meta.xml
<CustomField>
    <fullName>CollectionMethod__c</fullName>
    <defaultValue>&quot;請求書支払い&quot;</defaultValue>
    <label>回収方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CollectionMethod</valueSetName>
    </valueSet>
</CustomField>