force-app/main/default/objects/Account/fields/CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode__c</fullName>
    <formula>&quot;G&quot;&amp;MID(AccountID18__c,6,13)</formula>
    <label>顧客コード</label>
    <type>Text</type>
</CustomField>