force-app/main/default/objects/Account/fields/CustomerStage__c.field-meta.xml
<CustomField>
    <fullName>CustomerStage__c</fullName>
    <label>顧客ステージ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage0（未接触）</fullName>
            </value>
            <value>
                <fullName>Stage1（接触 but 商談NG）</fullName>
            </value>
            <value>
                <fullName>Stage2（商談 but ネタ以下）</fullName>
            </value>
            <value>
                <fullName>Stage3（ヨミ以上）</fullName>
            </value>
            <value>
                <fullName>Stage4（受注）</fullName>
            </value>
            <value>
                <fullName>Stage5（受注後解約）</fullName>
            </value>
            <value>
                <fullName>未フォロー</fullName>
            </value>
            <value>
                <fullName>フォロー中</fullName>
            </value>
            <value>
                <fullName>フォロー終了</fullName>
            </value>
            <value>
                <fullName>商談化</fullName>
            </value>
            <value>
                <fullName>要育成</fullName>
            </value>
            <value>
                <fullName>受注</fullName>
                <isActive>false</isActive>
                <label>受注</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>