force-app/main/default/objects/Account/fields/DebtPerson__c.field-meta.xml
<CustomField>
    <fullName>DebtPerson__c</fullName>
    <label>債務者区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>正常先</fullName>
            </value>
            <value>
                <fullName>支払相談先</fullName>
            </value>
            <value>
                <fullName>要注意先</fullName>
            </value>
            <value>
                <fullName>実質破綻先</fullName>
            </value>
            <value>
                <fullName>破綻先</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>