force-app/main/default/objects/Account/fields/DebtPersonItem__c.field-meta.xml
<CustomField>
    <fullName>DebtPersonItem__c</fullName>
    <label>債務者区分明細</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DebtPerson__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未連絡</fullName>
            </value>
            <value>
                <fullName>電話・メール（折返し待ち）</fullName>
            </value>
            <value>
                <fullName>電話・メール（不通）</fullName>
            </value>
            <value>
                <fullName>所在不明（謄本取得予定）</fullName>
            </value>
            <value>
                <fullName>所在不明（所在調査中）</fullName>
            </value>
            <value>
                <fullName>所在不明（現地調査予定）</fullName>
            </value>
            <value>
                <fullName>所在不明（閉鎖登記他確認済）</fullName>
            </value>
            <value>
                <fullName>会社清算・破産</fullName>
            </value>
            <value>
                <fullName>支払意思あり（交渉中）</fullName>
            </value>
            <value>
                <fullName>支払意思あり（分割弁済中）</fullName>
            </value>
            <value>
                <fullName>支払意思あり（入金待ち）</fullName>
            </value>
            <value>
                <fullName>支払拒絶（交渉中）</fullName>
            </value>
            <value>
                <fullName>支払拒絶（交渉決裂）</fullName>
            </value>
            <value>
                <fullName>支払拒絶（請求取り下げ）</fullName>
            </value>
            <value>
                <fullName>内容証明送付予定（自社）</fullName>
            </value>
            <value>
                <fullName>内容証明送付済（自社）</fullName>
            </value>
            <value>
                <fullName>内容証明送付予定（オーセンス）</fullName>
            </value>
            <value>
                <fullName>内容証明送付済（オーセンス）</fullName>
            </value>
            <value>
                <fullName>仮差押予定</fullName>
            </value>
            <value>
                <fullName>仮差押申立済</fullName>
            </value>
            <value>
                <fullName>仮差押完了</fullName>
            </value>
            <value>
                <fullName>支払督促予定</fullName>
            </value>
            <value>
                <fullName>支払督促申立済</fullName>
            </value>
            <value>
                <fullName>支払督促手続終了</fullName>
            </value>
            <value>
                <fullName>訴訟予定（社内調整）</fullName>
            </value>
            <value>
                <fullName>訴訟予定（書面準備）</fullName>
            </value>
            <value>
                <fullName>訴訟中</fullName>
            </value>
            <value>
                <fullName>訴訟終了（勝訴）</fullName>
            </value>
            <value>
                <fullName>訴訟終了（和解）</fullName>
            </value>
            <value>
                <fullName>訴訟終了（取下・敗訴）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>