force-app/main/default/objects/Account/fields/DuplicateIdentificationResult__c.field-meta.xml
<CustomField>
    <fullName>DuplicateIdentificationResult__c</fullName>
    <label>名寄せ結果</label>
    <length>10</length>
    <type>Text</type>
</CustomField>