force-app/main/default/objects/Account/fields/EmployeeCountF__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCountF__c</fullName>
    <label>従業員数_F</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>