force-app/main/default/objects/Account/fields/NegotiationPaymentSite__c.field-meta.xml
<CustomField>
    <fullName>NegotiationPaymentSite__c</fullName>
    <defaultValue>&quot;翌月末払い&quot;</defaultValue>
    <label>支払いサイト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentSite</valueSetName>
    </valueSet>
</CustomField>