force-app/main/default/objects/Account/fields/NichibenrenSakujyo__c.field-meta.xml
<CustomField>
    <fullName>NichibenrenSakujyo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>日弁連削除</label>
    <type>Checkbox</type>
</CustomField>