force-app/main/default/objects/Account/fields/OfficeName__c.field-meta.xml
<CustomField>
    <fullName>OfficeName__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>事務所名</label>
    <type>Text</type>
</CustomField>