force-app/main/default/objects/Account/fields/OppStatusBLC__c.field-meta.xml
<CustomField>
    <fullName>OppStatusBLC__c</fullName>
    <label>商談状況（BLC）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>