force-app/main/default/objects/Account/fields/OppStatusBLL__c.field-meta.xml
<CustomField>
    <fullName>OppStatusBLL__c</fullName>
    <label>商談状況（BLL）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>