force-app/main/default/objects/Account/fields/OppStatusOther__c.field-meta.xml
<CustomField>
    <fullName>OppStatusOther__c</fullName>
    <label>商談状況（それ以外）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>