force-app/main/default/objects/Account/fields/OrgA_AccountId__c.field-meta.xml
<CustomField>
    <fullName>OrgA_AccountId__c</fullName>
    <externalId>true</externalId>
    <label>組織A取引先レコードID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>