force-app/main/default/objects/Account/fields/OrganizationA_AccountId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationA_AccountId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>組織Aからのデータ移管時に使用。組織Aの取引先レコードIDを持つ</description>
    <externalId>true</externalId>
    <label>【外部ID】組織A取引先ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>