force-app/main/default/objects/Account/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <label>【削除予定】登録番号</label>
    <length>6</length>
    <type>Text</type>
</CustomField>