force-app/main/default/objects/Account/fields/ResidenceClaimDunningManagement__c.field-meta.xml
<CustomField>
    <fullName>ResidenceClaimDunningManagement__c</fullName>
    <label>滞留債権督促管理区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未連絡</fullName>
                <default>true</default>
                <label>未連絡</label>
            </value>
            <value>
                <fullName>折返待ち</fullName>
            </value>
            <value>
                <fullName>不通</fullName>
            </value>
            <value>
                <fullName>支払意思有り</fullName>
            </value>
            <value>
                <fullName>支払拒絶</fullName>
            </value>
            <value>
                <fullName>所在不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>