force-app/main/default/objects/Account/fields/RosettaId__c.field-meta.xml
<CustomField>
    <fullName>RosettaId__c</fullName>
    <description>ロゼッタ側で保持しているID</description>
    <label>ロゼッタID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>