force-app/main/default/objects/Account/fields/ShareURL__c.field-meta.xml
<CustomField>
    <fullName>ShareURL__c</fullName>
    <formula>IF( BEGINS($Api.Partner_Server_URL_490,&apos;https://bengo4.my.salesforce.com/&apos;) , &apos;https://bengo4.force.com/partner/&apos;, &apos;https://bengo4.my.salesforce.com/&apos; )&amp;Id</formula>
    <label>共有URL</label>
    <type>Text</type>
</CustomField>