force-app/main/default/objects/Account/fields/SubscriberCode__c.field-meta.xml
<CustomField>
    <fullName>SubscriberCode__c</fullName>
    <label>加入者コード</label>
    <length>10</length>
    <type>Text</type>
</CustomField>