force-app/main/default/objects/Account/fields/TradingAchievement__c.field-meta.xml
<CustomField>
    <fullName>TradingAchievement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引実績あり</label>
    <type>Checkbox</type>
</CustomField>