force-app/main/default/objects/Account/fields/TradingTargetRepPerson__c.field-meta.xml
<CustomField>
    <fullName>TradingTargetRepPerson__c</fullName>
    <label>取引先担当者</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIT-web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>