force-app/main/default/objects/Account/fields/TradingTargetRepPersonId__c.field-meta.xml
<CustomField>
    <fullName>TradingTargetRepPersonId__c</fullName>
    <formula>if
(
 Owner.UserId__c = &quot;00510000002nxYQAAY&quot;,&quot;00510000002nxYRAAY&quot;,Owner.UserId__c
)</formula>
    <label>取引先担当者ID</label>
    <type>Text</type>
</CustomField>