force-app/main/default/objects/Account/recordTypes/RecordTypeAccount.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeAccount</fullName>
    <active>true</active>
    <label>取引先</label>
</RecordType>