force-app/main/default/objects/Account/recordTypes/RecordTypeAgency.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeAgency</fullName>
    <active>false</active>
    <label>【削除予定】代理店</label>
</RecordType>